--- a/src/scss/components/_nbtn.scss
+++ b/src/scss/components/_nbtn.scss
@@ -33,6 +33,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    flex-grow: 1;
   }
 
   @include nbtn(30px, 8px, 4px);
@@ -91,6 +92,11 @@
   flex-direction: column;
   align-items: flex-start;
   text-align: left;
+  main {
+    flex-direction: column;
+    justify-content: flex-start;
+    text-align: left;
+  }
   .n-text {
     text-align: left;
   }
