--- a/src/scss/components/_nbtn.scss
+++ b/src/scss/components/_nbtn.scss
@@ -94,7 +94,7 @@
   text-align: left;
   main {
     flex-direction: column;
-    justify-content: flex-start;
+    align-items: flex-start !important;
     text-align: left;
   }
   .n-text {
