--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -88,6 +88,10 @@ TODO: Organize main into components or containers.
   position: sticky;
 }
 
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
 .rounded {
   border-radius: 6px;
 }
