feat: visual swiping between dashboards and tracker tabs

--- a/public/main.css
+++ b/public/main.css
@@ -7174,6 +7174,9 @@ TODO: Organize main into components or containers.
 .overflow-y-auto {
   overflow-y: auto; }
 
+overflow-x-hidden {
+  overflow-x: hidden; }
+
 .rounded {
   border-radius: 6px; }
 
