--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -91,6 +91,9 @@ TODO: Organize main into components or containers.
 .overflow-y-auto {
   overflow-y: auto;
 }
+overflow-x-hidden {
+  overflow-x: hidden;
+}
 
 .rounded {
   border-radius: 6px;
