fix: adding blocker on csv export

--- a/public/main.css
+++ b/public/main.css
@@ -7177,6 +7177,11 @@ TODO: Organize main into components or containers.
 overflow-x-hidden {
   overflow-x: hidden; }
 
+.fcenter {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center; }
+
 .rounded {
   border-radius: 6px; }
 
