--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -95,6 +95,12 @@ overflow-x-hidden {
   overflow-x: hidden;
 }
 
+.fcenter {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .rounded {
   border-radius: 6px;
 }
