--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -83,6 +83,18 @@ TODO: Organize main into components or containers.
   width: 2px;
 }
 
+.notify {
+  position:absolute;
+  left: 60%;
+  top:6%;
+  height:10px;
+  width:10px;
+  flex-shrink:0;
+  flex-grow:0;
+  border-radius:50%;
+  background-color:var(--color-red);
+}
+
 .sticky {
   position: -webkit-sticky;
   position: sticky;
