refactor: more scss cleanup

--- a/src/components/toolbar/toolbar.css
+++ b/src/components/toolbar/toolbar.css
@@ -1,5 +1,7 @@
 .n-toolbar {
-  @apply flex-shrink-0;
+  @apply flex-shrink;
+  @apply flex-grow;
+
   @apply h-14;
   @apply w-full;
   @apply flex;
