--- a/src/components/toolbar/toolbar.css
+++ b/src/components/toolbar/toolbar.css
@@ -18,67 +18,43 @@
 .n-toolbar-grid .btn {
   color: var(--color-inverse-1);
 }
-.n-toolbar .left,
-.n-toolbar .right {
-  min-width: 25%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
+.n-toolbar [slot='left'],
+.n-toolbar [slot='right'] {
+  @apply flex;
+  @apply items-center;
+  @apply h-auto;
 }
 .n-toolbar-grid {
   color: var(--color-inverse);
   display: grid;
-  grid-column-gap: 0px;
+  grid-column-gap: 2px;
   grid-row-gap: 0px;
   grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: 1fr;
-  height: 50px;
-  width: calc(100% - 16pt);
-  min-height: 50px;
-  margin-left: 8pt;
-  margin-right: 8pt;
-  height: auto;
+  @apply items-center;
+  @apply h-12;
+  @apply px-1;
 }
-.n-toolbar-grid.lg {
-  min-height: 50px;
-}
-.n-toolbar-grid.sm {
-  min-height: 30px;
-  height: 30px;
-  font-size: 0.9em;
-}
+
 .n-toolbar-grid .left {
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-  grid-area: 0.25;
+  /* grid-area: 0.25; */
   justify-content: center;
 }
 .n-toolbar-grid .main {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  grid-area: 0.0833333333;
-  justify-content: center;
-  font-weight: 700;
-  text-align: center;
-  line-height: 110%;
+  @apply leading-tight;
+  @apply text-center;
+  @apply flex;
+  @apply flex-col;
+  @apply justify-center;
+  @apply items-center;
 }
 .n-toolbar-grid .main h1,
 .n-toolbar-grid .main .title {
-  font-size: 1.1em;
-  font-weight: bold;
-  line-height: 1.12em;
-  margin: 2px;
-  padding: 0;
-  text-align: center;
+  @apply text-base md:text-lg;
+  @apply font-bold;
 }
 .n-toolbar-grid .right {
-  align-items: flex-end;
-  display: flex;
-  flex-direction: column;
-  grid-area: 0.0416666667;
-  justify-content: center;
 }
