chore: capture log improvements

--- a/src/components/capture-log/capture-log.css
+++ b/src/components/capture-log/capture-log.css
@@ -31,6 +31,11 @@
   @apply flex-shrink-0;
 }
 
+.capture-wrapper .mask-textarea.focused .clear-button,
+.capture-wrapper .mask-textarea.populated .clear-button {
+  @apply flex;
+}
+
 .capture-wrapper .mask-textarea {
   @apply flex;
   @apply flex-col;
@@ -42,10 +47,11 @@
   @apply bg-gray-200 dark:bg-gray-900;
   @apply overflow-hidden;
   @apply border;
-  @apply border-gray-200 dark:border-gray-600;
+  @apply border-gray-200 dark:border-gray-700;
   @apply border-opacity-60;
   transition: all 0.2s ease-in-out;
 }
+
 .capture-wrapper .mask-textarea.focused {
   @apply bg-gray-100 dark:bg-gray-800;
 }
@@ -57,12 +63,15 @@
   display: block;
 }
 .capture-log .mask-textarea.populated {
-  @apply bg-green-50 dark:bg-green-900 bg-opacity-75;
-  @apply border border-green-800 border-opacity-50;
+  @apply bg-green-50 dark:bg-green-700 dark:bg-opacity-20;
+  @apply border border-green-800 border-opacity-30;
 }
 
 .capture-log .mask-textarea.focused {
   @apply ring-2 ring-opacity-100 ring-primary-500;
+}
+.capture-log .mask-textarea .clear-button {
+  @apply hidden;
 }
 
 .capture-log .mask-textarea .action-button {
