style: history improvements

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -144,7 +144,12 @@ html.mode-dark {
   transform: scale(1.3);
   pointer-events: none;
 }
-
+.h-75vh {
+  height: 75vh;
+}
+.h-50vh {
+  height: 50vh;
+}
 .tap-icon {
   @apply text-primary-500;
 }
