--- a/src/components/board-tabs/board-tabs.css
+++ b/src/components/board-tabs/board-tabs.css
@@ -1,4 +1,5 @@
 .n-board-tabs button {
+  @apply flex items-center justify-center;
   @apply rounded-full;
   @apply py-1 px-1;
   @apply text-gray-800 dark:text-gray-300;
@@ -7,7 +8,7 @@
   @apply px-2;
 }
 .n-board-tabs button.selected {
-  @apply bg-gray-200 dark:bg-gray-800;
+  @apply bg-gray-200 dark:bg-gray-900;
   @apply text-black dark:text-white;
   @apply px-4;
 }
